# cirqLab

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/routes/: health.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: theme-toggle.tsx
apps/web/components/providers/: theme-provider.tsx
docker/: .env.example  docker-compose.yml
